# FalconGL

./: .gitignore  CMakeLists.txt  DoganGL.hpp  main.cpp
libs/: bmp-write.hpp
